# gpha-ai-mutation-library

./: LICENSE  README.md  ha_avian_influenza_mutation_table_gpha.tsv  m_avian_influenza_mutation_table_gpha.tsv  ns_avian_influenza_mutation_table_gpha.tsv  pb2_avian_influenza_mutation_table_gpha.tsv  pyproject.toml
archive/: 20251215_np_avian_influenza_mutation_table_gpha.tsv  20251215_pa_avian_influenza_mutation_table_gpha.tsv
schemas/: ha_avian_influenza_mutation_table_gpha.yml
schemas/reference_lists/: aa_list.txt  feature_type_list.txt  host_type_list.txt  phenotypic_categories_list.txt  segment_list.txt
scripts/: validate_and_update.py
src/mutation_table_updater/: validate_and_update.py
tables/: na_avian_influenza_mutation_table_gpha.tsv  pb1_avian_influenza_mutation_table_gpha.tsv
tests/: test_end_to_end.py  test_validate_and_update.py
tests/tables/: ha_correct_test.tsv
