[project]
    name = "gpha-ai-mutation-library"
    authors = [{name = "Nicholas Ellaby", email = "nicholas.ellaby@ukhsa.gov.uk"}]
    description = "AI-Mutation-Library: A library utility for storing and upating validated avian influenza genomic mutations."
    dynamic = ["version"]
    requires-python = ">= 3.12"

    dependencies = [
        "pandas==2.0.3",
        "pyyaml==6.0",
        "pytest"
    ]

[tool.setuptools.dynamic]
version = { attr = "easyin.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # comprehesnions
    "C4",
    # pathlib
    "PTH",
]


[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[pytest]
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 2
